--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pg",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "productName": "PlayGround!",
   "cordovaId": "org.cordova.quasar.app",
   "capacitorId": "",
   "author": "Cinus",
